fix(ie): RTL-friendly nav spacing

--- a/html/themes/custom/whd23/components/whd-header/whd-header.css
+++ b/html/themes/custom/whd23/components/whd-header/whd-header.css
@@ -58,7 +58,10 @@
 }
 
 .no-js .main-nav li + li {
-  margin-left: 2rem;
+  --whd-unset-margin: 0;
+
+  margin: 0 1rem;
+  margin: 0 var(--whd-unset-margin);
 }
 
 /**
